profilelist1exp/unpackaged/objects/Addendum_Data__c.object
<CustomObject>
    <description>Object to store Addendum Data</description>
    <fields>
        <fullName>Addendum_Contract_Relation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Addendum related to Contract</description>
        <label>Addendum Contract Relation</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Addendum Data</relationshipLabel>
        <relationshipName>Addendum_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addendum_Effective_Date__c</fullName>
        <description>Addendum Effective Date</description>
        <label>Addendum Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_Expiration__c</fullName>
        <description>Addendum Expiration</description>
        <label>Addendum Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_Form_Version__c</fullName>
        <description>Addendum Form Version</description>
        <label>Addendum Form Version</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addendum_Non_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Addendum Non-Standard</description>
        <label>Addendum Non-Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addendum_Summary__c</fullName>
        <description>Addendum Summary</description>
        <label>Addendum Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Addendum_status__c</fullName>
        <description>Addendum/ Amendment Status</description>
        <label>Addendum/ Amendment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending renewal</fullName>
                </value>
                <value>
                    <fullName>SEE REMARKS</fullName>
                </value>
                <value>
                    <fullName>See Remarks- Name Change</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Terminated - SEE REMARKS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Addendum_Documentation__c</fullName>
        <inlineHelpText>Enter link location of folder containing documents pertaining to this addendum. Text in this field will need to be copied &amp; pasted into a browser to access folder location.</inlineHelpText>
        <label>Link to Addendum Documentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Addendum Data</label>
    <nameField>
        <label>Addendum Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addendum Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>